Fixed issues with the other pages headers being pushed down by extra padding

--- a/css/welcome.css
+++ b/css/welcome.css
@@ -174,7 +174,6 @@ i.resumeIcon {
 	color: #F5F1ED;
 	font-size: 1.7vw;
 	padding: 5%;
-	margin-top: 10%;
 }
 
 .homepageButtonHover {
@@ -225,7 +224,6 @@ i.fontAwesomeIcons {
 	font-size: 2.8vw;
 	text-align: center;
 	color: #F5F1ED;
-	padding-top: 70px;
 }
 
 .descriptionBorder {
@@ -250,7 +248,6 @@ i.fontAwesomeIcons {
 .resumeHeader {
 	color: #F5F1ED;
 	font-size: 4.5vw;
-	padding-top: 70px;
 	padding-left: 0px;
 	text-align: right;
 }
@@ -258,7 +255,7 @@ i.fontAwesomeIcons {
 .resumeHeaderContactInfo {
 	color: #F5F1ED;
 	font-size: 1.5vw;
-	padding-top: 75px;
+	padding-top: 5px;
 	padding-right: 0px;
 }
 
